aiscm (0.20.1-1) unstable; urgency=low

  - Update to LLVM version 9. Closes: #947434

 -- Jan Wedekind <jan@wedesoft.de>  Sat, 28 Dec 2019 22:54:36 +0000
aiscm (0.19.2-1) unstable; urgency=low

  - Do not generate mirror.jpg. Closes: #941779

 -- Jan Wedekind <jan@wedesoft.de>  Sat,  5 Oct 2019 19:53:01 +0100

aiscm (0.19.1-1) unstable; urgency=low

  - New upstream release
  - Specify libomp-dev version (libomp-7-dev). Closes: #933705
  - Bumped Standards-Version to 4.4.0
  - Bumped compatibility level to 12.
  - do not run dwz on Guile object (*.go) files
  - remove library-not-linked-against-libc override

 -- Jan Wedekind <jan@wedesoft.de>  Fri,  2 Aug 2019 20:51:31 +0100

aiscm (0.18.1-1) unstable; urgency=low

  - New upstream release
  - Update LLVM dependency to 7.0. Closes: #912798
  - Use clang-7 instead of gcc

 -- Jan Wedekind <jan@wedesoft.de>  Tue,  6 Nov 2018 20:57:33 +0000

aiscm (0.17.1-1) unstable; urgency=low

  - New upstream release
  - Lintian override for library-not-linked-against-libc

 -- Jan Wedekind <jan@wedesoft.de>  Sat, 27 Oct 2018 21:20:00 +0100

aiscm (0.16.2-1) unstable; urgency=low

  - New upstream release.
  - Package reverted back to arch:amd64 only

 -- Jan Wedekind <jan@wedesoft.de>  Wed, 19 Sep 2018 21:43:00 +0100

aiscm (0.16.1-1) unstable; urgency=low

  - New upstream release.
  - Added LLVM to build dependencies.
  - Package now arch:any instead of amd64 only

 -- Jan Wedekind <jan@wedesoft.de>  Mon, 10 Sep 2018 21:24:52 +0100

aiscm (0.15.5-1) unstable; urgency=low

  - New upstream release.
  - Disable some FFMpeg audio tests. Closes: #904104

 -- Jan Wedekind <jan@wedesoft.de>  Fri, 20 Jul 2018 10:17:00 +0100

aiscm (0.15.4-1) unstable; urgency=low

  - New upstream release

 -- Jan Wedekind <jan@wedesoft.de>  Tue,  5 Jun 2018 19:36:42 +0100

aiscm (0.15.3-1) unstable; urgency=low

  - Add Guile interpreter to dependencies so that auto test passes

 -- Jan Wedekind <jan@wedesoft.de>  Sun,  3 Jun 2018 19:36:42 +0100
